--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     #controlWrapper {
       position: absolute;
-      top: 10px;
+      top: 70px;
       left: 10px;
       background: white;
       padding: 8px 12px;
@@ -61,8 +61,6 @@
       display: none;
     }
 
-    #opacitySlider { width: 100%; }
-
     #legendContainer img {
       height: 40vh;
       width: auto;
@@ -87,14 +85,14 @@
     .zone-text.stroke {
       -webkit-text-stroke: 0.35px rgba(0,0,0,0.85);
       text-shadow:
-        0.3px 0   0 rgba(0,0,0,0.85),
-       -0.3px 0   0 rgba(0,0,0,0.85),
-        0   0.3px 0 rgba(0,0,0,0.85),
-        0  -0.3px 0 rgba(0,0,0,0.85),
-        0.21px  0.21px 0 rgba(0,0,0,0.85),
-       -0.21px  0.21px 0 rgba(0,0,0,0.85),
+        0.3px 0 0 rgba(0,0,0,0.85),
+        -0.3px 0 0 rgba(0,0,0,0.85),
+        0 0.3px 0 rgba(0,0,0,0.85),
+        0 -0.3px 0 rgba(0,0,0,0.85),
+        0.21px 0.21px 0 rgba(0,0,0,0.85),
+        -0.21px 0.21px 0 rgba(0,0,0,0.85),
         0.21px -0.21px 0 rgba(0,0,0,0.85),
-       -0.21px -0.21px 0 rgba(0,0,0,0.85);
+        -0.21px -0.21px 0 rgba(0,0,0,0.85);
     }
 
     @media (max-width: 600px) {
@@ -112,7 +110,7 @@
     #searchBox {
       position: absolute;
       top: 10px;
-      right: 10px;
+      left: 10px;
       background: white;
       padding: 6px 10px;
       border-radius: 6px;
@@ -126,7 +124,6 @@
       border: none;
       outline: none;
       font-size: 14px;
-      font-family: 'Ubuntu', sans-serif;
     }
 
     #searchSuggestions {
@@ -170,18 +167,26 @@
 
   <div id="controlWrapper">
     <button id="toggleOpacity" class="toggle-button">Show Climate & Labels</button>
+
     <div id="opacityControls">
-      <input type="range" id="opacitySlider" min="0" max="1" step="0.05" value="0.6" />
+      <div style="margin-bottom:6px;">
+        <label style="font-size:14px;">Climate opacity</label>
+        <input type="range" id="climateSlider" min="0" max="1" step="0.05" value="0.6">
+      </div>
+
+      <div>
+        <label style="font-size:14px;">Labels opacity</label>
+        <input type="range" id="labelSlider" min="0" max="1" step="0.05" value="0.6">
+      </div>
     </div>
 
     <button id="toggleLegend" class="toggle-button">Show Legend</button>
     <div id="legendContainer">
-      <img src="./legend.jpg" alt="Climate Zones Legend" />
+      <img src="./legend.jpg" alt="Climate Zones Legend">
     </div>
   </div>
 
   <script>
-    // --- Colour brightness helpers ---
     function hexToRgb(hex) {
       if (!hex) return null;
       let c = hex.trim();
@@ -214,23 +219,20 @@
       return { type: 'Feature', geometry: { type: 'Polygon', coordinates: [coords] } };
     }
 
-    mapboxgl.accessToken = 'pk.eyJ1IjoiYXJjaHdydGgiLCJhIjoiY21hZHZpb3Y0MDB3czJxcjZxNjMyNjV5ayJ9.Z5pVSBUcI3HDeALtF6YIiA';
+    mapboxgl.accessToken =
+      'pk.eyJ1IjoiYXJjaHdydGgiLCJhIjoiY21hZHZpb3Y0MDB3czJxcjZxNjMyNjV5ayJ9.Z5pVSBUcI3HDeALtF6YIiA';
 
     const map = new mapboxgl.Map({
       container: 'map',
-      // satellite + labels, so place names actually exist
       style: 'mapbox://styles/mapbox/satellite-streets-v12',
       projection: 'globe',
       zoom: 1.5,
-      center: [39.271406, -7.046950],
-      pitch: 0,
-      bearing: 0
+      center: [39.271406, -7.046950]
     });
 
     map.on('style.load', () => map.setFog({}));
 
     map.on('load', () => {
-      // --- Köppen polygons ---
       map.addSource('koppen', { type: 'geojson', data: './koppen.json' });
       map.addLayer({
         id: 'koppen-layer',
@@ -239,7 +241,6 @@
         paint: { 'fill-color': ['get', 'fill'], 'fill-opacity': 0.6 }
       });
 
-      // --- Pins ---
       fetch('pins.json')
         .then(res => res.json())
         .then(points => {
@@ -248,27 +249,24 @@
 
             let zoneLines = "";
             if (pt.zones && Array.isArray(pt.zones)) {
-              zoneLines = pt.zones.map(z => {
-                const bright = brightnessFromHex(z.colour) >= BRIGHTNESS_THRESHOLD;
-                const cls = bright ? 'zone-text stroke' : 'zone-text';
-                return `<span class="${cls}" style="color:${z.colour};">${z.text}</span>`;
-              }).join('<br>');
-            } else if (pt.zoneText && pt.zoneColour) {
-              const bright = brightnessFromHex(pt.zoneColour) >= BRIGHTNESS_THRESHOLD;
-              const cls = bright ? 'zone-text stroke' : 'zone-text';
-              zoneLines = `<span class="${cls}" style="color:${pt.zoneColour};">${pt.zoneText}</span>`;
+              zoneLines = pt.zones
+                .map(z => {
+                  const bright = brightnessFromHex(z.colour) >= BRIGHTNESS_THRESHOLD;
+                  const cls = bright ? 'zone-text stroke' : 'zone-text';
+                  return `<span class="${cls}" style="color:${z.colour};">${z.text}</span>`;
+                })
+                .join('<br>');
             }
 
             const popupHtml =
               `<a href="${pt.link}" target="_blank" rel="noopener noreferrer">` +
-              `<div style="font-weight:700; line-height:1.3; text-align:center; font-size:17px; margin-bottom:4px;">${pt.title}</div>` +
+              `<div style="font-weight:700; text-align:center; font-size:17px; margin-bottom:4px;">${pt.title}</div>` +
               (pt.address ? `${pt.address}<br>` : '') +
               `${zoneLines}<br>` +
               (pt.gdpr ? '<em>Marked area is not exact.</em><br>' : '') +
-              (pt.imageUrl ? `
-                <div style="text-align:center;">
-                  <img class="popup-image" src="${pt.imageUrl}" alt="${pt.title}" />
-                </div>` : '') +
+              (pt.imageUrl
+                ? `<div style="text-align:center;"><img class="popup-image" src="${pt.imageUrl}" /></div>`
+                : '') +
               `</a>`;
 
             new mapboxgl.Marker({ color: '#FCF5E3' })
@@ -296,20 +294,27 @@
           });
         });
 
-      // --- Navigation control ---
-      map.addControl(new mapboxgl.NavigationControl({ showCompass: false }), 'top-right');
+      map.addControl(
+        new mapboxgl.NavigationControl({ showCompass: false }),
+        'top-right'
+      );
 
-      // --- Label opacity + Koppen opacity tied to slider ---
-      const slider = document.getElementById('opacitySlider');
       const symbolLayers = map.getStyle().layers
         .filter(l => l.type === 'symbol')
         .map(l => l.id);
 
-      function applyOpacity(value) {
-        const v = parseFloat(value);
+      const climateSlider = document.getElementById('climateSlider');
+      const labelSlider = document.getElementById('labelSlider');
+
+      climateSlider.addEventListener('input', e => {
+        const v = parseFloat(e.target.value);
         if (map.getLayer('koppen-layer')) {
           map.setPaintProperty('koppen-layer', 'fill-opacity', v);
         }
+      });
+
+      labelSlider.addEventListener('input', e => {
+        const v = parseFloat(e.target.value);
         symbolLayers.forEach(id => {
           if (map.getLayer(id)) {
             if (map.getPaintProperty(id, 'text-opacity') !== undefined) {
@@ -320,13 +325,12 @@
             }
           }
         });
-      }
+      });
 
-      applyOpacity(slider.value);
-      slider.addEventListener('input', e => applyOpacity(e.target.value));
+      climateSlider.dispatchEvent(new Event('input'));
+      labelSlider.dispatchEvent(new Event('input'));
     });
 
-    // --- Autocomplete search using Mapbox Geocoding REST API ---
     const searchInput = document.getElementById('searchInput');
     const suggestionsEl = document.getElementById('searchSuggestions');
     let searchTimeout = null;
@@ -337,7 +341,7 @@
     }
 
     function goToFeature(feature) {
-      if (!feature || !feature.center) return;
+      if (!feature.center) return;
       const [lon, lat] = feature.center;
       map.flyTo({ center: [lon, lat], zoom: 10 });
 
@@ -350,17 +354,16 @@
     }
 
     async function fetchSuggestions(query) {
-      const center = map.getCenter();
+      const c = map.getCenter();
       const url =
         'https://api.mapbox.com/geocoding/v5/mapbox.places/' +
         encodeURIComponent(query) +
-        '.json?access_token=' + mapboxgl.accessToken +
-        '&autocomplete=true&limit=5&proximity=' +
-        center.lng + ',' + center.lat;
+        `.json?access_token=${mapboxgl.accessToken}` +
+        `&autocomplete=true&limit=5&proximity=${c.lng},${c.lat}`;
 
-      const res = await fetch(url);
-      const data = await res.json();
-      return data.features || [];
+      const r = await fetch(url);
+      const d = await r.json();
+      return d.features || [];
     }
 
     async function handleSearchInput(value) {
@@ -387,7 +390,7 @@
         div.className = 'suggestion-item';
         div.textContent = f.place_name;
         div.addEventListener('click', () => {
-          searchInput.value = f.text || q;
+          searchInput.value = f.text;
           goToFeature(f);
         });
         suggestionsEl.appendChild(div);
@@ -405,15 +408,10 @@
       if (e.key === 'Enter') {
         e.preventDefault();
         const first = suggestionsEl.querySelector('.suggestion-item:not(.disabled)');
-        if (first) {
-          first.click();
-        } else {
-          handleSearchInput(searchInput.value);
-        }
+        if (first) first.click();
       }
     });
 
-    // --- UI toggles ---
     document.getElementById('toggleOpacity').addEventListener('click', () => {
       const el = document.getElementById('opacityControls');
       el.style.display = el.style.display === 'block' ? 'none' : 'block';
